feat: 加入redis对工单详情进行缓存，减少数据库访问次数、通过缓存幂等键-工单id的key-value形式来放重。
